<resources>
    <string name="app_name">Clockit</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_alarm_details">AlarmDetailsActivity</string>

    <string name="details_alarm_name">Alarm Name</string>

    <string name="details_repeat_weekly">Repeat Weekly</string>
    <string name="details_vibrate">Vibrate</string>
    <string name="details_fade_in">Fade In</string>
    <string name="details_fade_in_desc">Gently increases alarm volume</string>
    <string name="details_snooze_on">Snooze Duration</string>
    <string name="alarm_wake_up">Alarm!</string>

    <string name="details_sunday">Su</string>
    <string name="details_monday">M</string>
    <string name="details_tuesday">Tu</string>
    <string name="details_wednesday">W</string>
    <string name="details_thursday">Th</string>
    <string name="details_friday">F</string>
    <string name="details_saturday">Sa</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_tone_default">Select an alarm tone</string>
    <string name="title_activity_alarm_screen">AlarmScreen</string>
    <string name="title_activity_choose_sound">Choose Sound</string>

    <string name="ringtone_sounds">Sounds</string>
    <string name="ringtone_music">Music</string>
    <string name="ringtone_new">New</string>

    <string name="record_fragment_title">Record a New Ringtone!</string>


</resources>
